--- a/report/doc/pim.tex
+++ b/report/doc/pim.tex
@@ -184,7 +184,7 @@ Les résultats obtenus par ce type approche sont très satisfaisants, par
 exemple la reconstitutions de la géométrie du visage a une échelle
 des pores a été déjà réalisé. 
  
-Cependant, il reste encore des improvements pour cette approche,
+Cependant, il reste encore des amélliorations pour cette approche,
 notamment par rapport à la propagation de la maillage de points d'une
 trame à autre. 
 
@@ -507,7 +507,7 @@ utilisées.
   \end{center}
 \end{figure}
 
-Le résultat de cette étape, est un map de disparité, contenant pour
+Le résultat de cette étape, est une carte de disparité, contenant pour
 chaque pixel de l'image $I$, la valeur de déplacement dans l'image
 $J$. 
 
