Adding some result images

--- a/report/slides/pim.sty
+++ b/report/slides/pim.sty
@@ -61,6 +61,8 @@
 \RequirePackage{marvosym} % figuras \Letter \Email 
 \RequirePackage{fancyhdr}     % Headers
 \RequirePackage{epsf}
+\RequirePackage{caption}
+\RequirePackage{subcaption}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows}
 \tikzstyle{block}=[draw opacity=0.7,line width=1.4cm]
