--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -166,7 +166,56 @@
 
 
 \section{Résultats}
+
 \begin{frame}{}
+\begin{figure}[ht!]
+        \centering
+        \begin{subfigure}[b]{0.5\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{img/f9}
+                \caption{Trame 9}
+                \label{fig:trame9}
+        \end{subfigure}%
+        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.5\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{img/f10}
+                \caption{Trame 10}
+                \label{fig:trame10}
+        \end{subfigure}
+        \caption{Séquence d'ouverture de la bouche}
+        \label{fig:trames910}
+\end{figure}
+\end{frame}{}
+
+
+\begin{frame}{}
+\begin{figure}[ht!]
+        \centering
+        \begin{subfigure}[b]{0.6\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{img/f9disp}
+        \end{subfigure}%
+        ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.4\textwidth}
+                \centering
+                \includegraphics[scale=0.43]{img/ColorChart}
+        \end{subfigure}
+        \caption{Carte de déplacement entre trames 9 et 10}
+
+\end{figure}
+\end{frame}{}
+
+\begin{frame}{}
+\begin{figure}[ht!]
+  \begin{center}
+    \includegraphics[width=\textwidth]{img/f9_plain}
+  \end{center}
+\end{figure}
+
+
 \end{frame}{}
 
 
@@ -176,7 +225,7 @@
   
   \begin{columns}
     \begin{column}{0.5\textwidth}
-      
+     
       \begin{beamerboxesrounded}[shadow=true]{Kinect}
         \begin{itemize}
         \item Faible précision
