--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -43,7 +43,7 @@
           \end{itemize}
         \end{block}
 
-        \begin{alertblock}{Préocupation}
+        \begin{alertblock}{Préoccupation}
           \begin{itemize}
           \item Temps de configuration 
           \item Invasion au acteur 
@@ -52,7 +52,7 @@
 
         \begin{exampleblock}{Situation}
           \begin{itemize}
-          \item Convergenge aux captures passives
+          \item Convergence aux captures passives
           \end{itemize}
         \end{exampleblock}
 
@@ -86,7 +86,7 @@
   \end{frame}
 
 %\subsection{Le context}
-\subsection{Etat de l'art}
+\subsection{État de l'art}
 
 \begin{frame}{Les méthodes de capture}
   
@@ -117,6 +117,7 @@
               \includegraphics[width=\textwidth]{img/Making-of-Tintin-Spielberg_scaledown_450}
             }
           }
+
     \end{column}
   \end{columns}
 \end{frame}
@@ -137,7 +138,7 @@
     \end{centering}
   \end{bkblock}
 
-  \begin{greyblock}{Environement}
+  \begin{greyblock}{Environnement}
     \begin{center}
       \includegraphics[scale=0.1]{img/linux}
       \hspace{3mm}
@@ -150,24 +151,27 @@
       \includegraphics[scale=0.3]{img/eigen}
     \end{center}
   \end{greyblock}
-
     
 \end{frame}
 
-\begin{frame}{De la capture à la reconstruction finale}
-    \includegraphics[width=\textwidth]{img/projSystem}
-\end{frame}
-
 \begin{frame}{Les étapes}
+\begin{figure}[ht!]
   \begin{center}
     \includegraphics[width=\textwidth]{img/projDiagram}
   \end{center}
+\end{figure}
 \end{frame}
 
 
+\begin{frame}{De la capture à la reconstruction finale}
+\begin{figure}[ht!]
+    \includegraphics[width=\textwidth]{img/projSystem}
+\end{figure}
+\end{frame}
+
 \section{Résultats}
 
-\begin{frame}{}
+\begin{frame}{Résultats}
 \begin{figure}[ht!]
         \centering
         \begin{subfigure}[b]{0.5\textwidth}
@@ -180,7 +184,7 @@
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.5\textwidth}
                 \centering
-                \includegraphics[width=\textwidth]{img/f10}
+               \includegraphics[width=\textwidth]{img/f10}
                 \caption{Trame 10}
                 \label{fig:trame10}
         \end{subfigure}
@@ -231,19 +235,17 @@
         \item Faible précision
         \item Carte de profondeur incomplète
         \item Adaptation de l'algorithme
+        \item Résultat bruité
         \end{itemize}
       \end{beamerboxesrounded}
     \end{column}    
     
     \begin{column}{0.5\textwidth}
-      \begin{beamerboxesrounded}[shadow=true]{Algorithme}
-
+      \begin{exampleblock}{Algorithme}
         \begin{itemize}
-        \item Résultat bruité 
-        \item Interferance de l'illumination
+        \item Rafinnement récupère grande partie des informations perdues
         \end{itemize}
-
-      \end{beamerboxesrounded}
+      \end{exampleblock}
 
     \end{column}    
   \end{columns}    
@@ -254,7 +256,7 @@
 \begin{frame}{}
   \begin{figure}
     \begin{centering}
-      \Huge Demostration!
+      \Huge Démonstration!
       \par\end{centering}
   \end{figure}
 \end{frame}
