Changing figures with final results

--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -50,13 +50,21 @@
           \end{itemize}
         \end{alertblock}
 
-        \begin{exampleblock}{Situation}
-          \begin{itemize}
-          \item Convergence aux captures passives
-          \end{itemize}
-        \end{exampleblock}
+\begin{figure}
+  
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width=\textwidth]{img/Face-Mocap}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      
+      \includegraphics[width=\textwidth]{img/Making-of-Tintin-Spielberg_scaledown_450}
+    \end{column}
+  \end{columns}
+  
+\end{figure}
 
-%  \begin{block}
+  %  \begin{block}
 
 %    \begin{columns}
 %      \begin{column}{0.5\textwidth}
@@ -90,67 +98,65 @@
 
 \begin{frame}{Les méthodes de capture}
   
-  \begin{columns}
-    \begin{column}{0.5\textwidth}
-      \pgfputat
-          {
-            \pgfxy(0,-1)}{\pgfbox[left,top]
-            {
-              \includegraphics[width=\textwidth]{img/Face-Mocap}
-            }
-          }
-      \pgfputat
-          {
-            \pgfxy(0,2)}{\pgfbox[left,top]
-            {
-              \includegraphics[width=\textwidth]{img/man}
-            }
-          }
+        \begin{exampleblock}{Situation}
+          \begin{itemize}
+          \item Convergence aux captures passives
+          \end{itemize}
+        \end{exampleblock}
+        
+        %   \begin{column}{0.5\textwidth}
+        
+        \begin{figure}
+          \centering
+          \includegraphics[width=7cm]{img/man}
+        \end{figure}
 
-    \end{column}
-    
-    \begin{column}{0.5\textwidth}
-      \pgfputat
-          {
-            \pgfxy(0,1.5)}{\pgfbox[left,top]
-            {
-              \includegraphics[width=\textwidth]{img/Making-of-Tintin-Spielberg_scaledown_450}
-            }
-          }
-
-    \end{column}
-  \end{columns}
+ %   \end{column}
+ % \end{columns}
 \end{frame}
 
 
 \section{Projet}
+
 \begin{frame}{Le projet}
-  \begin{block}{Objectif}
+
+  \begin{block}{Disney}
+    \begin{itemize}
+    \item Capturer des performances expressives très
+      détaillées
+    \item 16 caméras HD
+    \item Studio propre
+    \end{itemize}
+  \end{block}
+  
+  \begin{alertblock}{Nous}
     \begin{itemize}
     \item Capturer des performances expressives très
       détaillées en utilisant un matériel de prix accessible
+    \item Une Kinect
+    \item Aucun studio
     \end{itemize}
-  \end{block}
+  \end{alertblock}
 
-  \begin{bkblock}{Matériel}
-    \begin{centering}
-      \includegraphics[scale=0.2]{img/kinect}
-    \end{centering}
-  \end{bkblock}
+%  \begin{bkblock}{Matériel}
+%    \begin{centering}
+%      \includegraphics[scale=0.2]{img/kinect}
+%    \end{centering}
+%  \end{bkblock}
 
-  \begin{greyblock}{Environnement}
-    \begin{center}
-      \includegraphics[scale=0.1]{img/linux}
-      \hspace{3mm}
-      \includegraphics[scale=0.3]{img/git}
-      \hspace{3mm}
-      \includegraphics[scale=0.1]{img/openmp}
-      \hspace{3mm}
-      \includegraphics[scale=0.1]{img/qt}
-      \hspace{3mm}
-      \includegraphics[scale=0.3]{img/eigen}
-    \end{center}
-  \end{greyblock}
+%  \begin{greyblock}{Environnement}
+%    \begin{center}
+%      \includegraphics[scale=0.1]{img/linux}
+%      \hspace{3mm}
+%      \includegraphics[scale=0.3]{img/git}
+%      \hspace{3mm}
+%      \includegraphics[scale=0.1]{img/openmp}
+%      \hspace{3mm}
+%      \includegraphics[scale=0.1]{img/qt}
+%      \hspace{3mm}
+%      \includegraphics[scale=0.3]{img/eigen}
+%    \end{center}
+%  \end{greyblock}
     
 \end{frame}
 
