--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -129,15 +129,6 @@
     \end{itemize}
   \end{block}
   
-  \begin{alertblock}{Nous}
-    \begin{itemize}
-    \item Capturer des performances expressives très
-      détaillées en utilisant un matériel de prix accessible
-    \item Une Kinect
-    \item Aucun studio
-    \end{itemize}
-  \end{alertblock}
-
 %  \begin{bkblock}{Matériel}
 %    \begin{centering}
 %      \includegraphics[scale=0.2]{img/kinect}
@@ -159,6 +150,23 @@
 %  \end{greyblock}
     
 \end{frame}
+
+\begin{frame}{Les étapes}
+\begin{figure}[ht!]
+  \begin{center}
+    \includegraphics[width=\textwidth]{img/disney}
+  \end{center}
+\end{figure}
+\end{frame}
+
+\begin{frame}{}
+  \begin{alertblock}{Notre approche:}
+    \begin{itemize}
+    \item Utiliser une Kinect: une maillage à temps réel
+    \end{itemize}
+  \end{alertblock}
+\end{frame}
+
 
 \begin{frame}{Les étapes}
 \begin{figure}[ht!]
@@ -203,13 +211,13 @@
 \begin{frame}{}
 \begin{figure}[ht!]
         \centering
-        \begin{subfigure}[b]{0.6\textwidth}
+        \begin{subfigure}[b]{0.60\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{img/f9disp}
         \end{subfigure}%
         ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
           %(or a blank line to force the subfigure onto a new line)
-        \begin{subfigure}[b]{0.4\textwidth}
+        \begin{subfigure}[b]{0.40\textwidth}
                 \centering
                 \includegraphics[scale=0.43]{img/ColorChart}
         \end{subfigure}
