--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -16,7 +16,7 @@
 \subtitle{PIM380} 
 \author[Tiago Siva, Vinicius Gardelli]{
   Tiago Chedraoui Silva \and
-  Vinicius Dias Gardelli\\
+  Vinicius Dias de Oliveira Gardelli\\
 }
 \institute{Télécom Paristech}
 \date{Juin 28, 2013}
