Fixed some last-minute details on presentation.
Signed-off-by: Vinicius Dias de Oliveira Gardelli <gardelli123@gmail.com>

--- a/report/slides/pim.tex
+++ b/report/slides/pim.tex
@@ -19,7 +19,7 @@
   Vinicius Dias de Oliveira Gardelli\\
 }
 \institute{Télécom Paristech}
-\date{Juin 28, 2013}
+\date{26 juin 2013}
 
 
 \begin{document}
@@ -229,13 +229,20 @@
 \begin{frame}{}
 \begin{figure}[ht!]
   \begin{center}
-    \includegraphics[width=\textwidth]{img/f9_plain}
+    \includegraphics[width=\textwidth]{img/snapshot}
   \end{center}
 \end{figure}
 
 
 \end{frame}{}
 
+\begin{frame}{}
+  \begin{figure}
+    \begin{centering}
+      \Huge Démonstration!
+      \par\end{centering}
+  \end{figure}
+\end{frame}
 
 \section{Conclusion}
 
@@ -266,14 +273,6 @@
   
 \end{frame}
 
-
-\begin{frame}{}
-  \begin{figure}
-    \begin{centering}
-      \Huge Démonstration!
-      \par\end{centering}
-  \end{figure}
-\end{frame}
 
 % 
 % Questions
